--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,8 +1,8 @@
 
 
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus >
 
-  <ion-side-menu-content>
+  <ion-side-menu-content drag-content="false">
 
     <ion-nav-bar class="bar-positive">
     
@@ -20,13 +20,13 @@
   </ion-side-menu-content>
 
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" >
 
     <ion-header-bar class="bar-stable">
       <h1 class="title">Left</h1>
     </ion-header-bar>
 
-    <ion-content>
+    <ion-content >
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
